# imst

./: Cargo.toml  README.md  VISION.md
examples/: request.json
rfc/: 0001-package-spec-to-installed-marker.md  0002-reducer-effect-file-reconciliation.md
src/: digest.rs  file.rs  intent.rs  lib.rs  loader.rs  main.rs  runtime.rs  state.rs  watcher.rs
tests/: inotify_pipeline.rs  two_level_reconciliation.rs
