[package]
name = "imst"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-compression = { version = "0.4.42", features = ["tokio", "gzip"] }
camino = "1.2.4"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.11"
log = "0.4.33"
reqwest = { version = "0.13.4", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tar = "0.3.1"
url = { version = "2.5.8", features = ["serde"] }
